--- a/css/partials/_info.scss
+++ b/css/partials/_info.scss
@@ -6,3 +6,6 @@ Author URI: meetakshay@2626.today
 Description: An award-winning marketing company founded in 2015, our mission is to craft brilliant experiences for brilliant people, whatever the budget, whatever the brief.
 Version: 1.0
 */
+
+$phone: 414px;
+$tab: 786px;
